2003-04-10	Nigel Weters <nwetters@cpan.org>
	* GammaDistribution.pm initial release to CPAN based on GNU GSL
	
	