@@ -6,3 +6,4 @@ README
 lib/Statistics/GammaDistribution.pm
 t/00moduleParsing.t
 t/01methods.t
+META.yml                                 Module meta-data (added by MakeMaker)
