@@ -1,4 +1,15 @@
-2003-04-10	Nigel Weters <nwetters@cpan.org>
+<-------------- THE SEVENTY-TWO CHARACTER COLUMN-OMETER --------------->
+<--------1---------2---------3---------4---------5---------6---------7->
+
+
+Statistics-GammaDistribution-0.02, 2006.04.25
+---------------------------------------------
+BUGFIX:
+  "_rand_nonzero ...  would return zero when CORE::rand() returns zero"
+ - Yoshio Fukushige <fukushige.yoshio at jp dot panasonic dot com>
+
+
+2003-04-10	Nigel Weters Gourlay <nwetters@cpan.org>
 	* GammaDistribution.pm initial release to CPAN based on GNU GSL
 	
 	
